--- a/themes/v15_fadmashion_commerce/css/style.css
+++ b/themes/v15_fadmashion_commerce/css/style.css
@@ -97,7 +97,7 @@ tbody {border: medium none}
 #photoBox.pagination li a img, #zoomed .pagination li a img{border:1px solid #F0EEEA;}
 #photoBox .pagination li a img:hover, #zoomed .pagination li a img:hover{border:1px solid #A32E27;}
 
-#photoBox .next, .photos .prev, .photos .zoom, #zoomed .next, #zoomed .prev, #zoomed .zoom {float: left; display: block; text-indent: -9999px; overflow: hidden; }
+#photoBox .next, #photoBox .prev, #photoBox .zoom, #zoomed .next, #zoomed .prev, #zoomed .zoom {float: left; display: block; text-indent: -9999px; overflow: hidden; }
 #photoBox.next:hover, .photos .prev:hover, .photos .zoom:hover {background-position: bottom left;}
 #photoBox .next { background:url("../images/img_nav_next.jpg") no-repeat scroll left top transparent;height:27px;width:56px;}
 #photoBox .prev { background:url("../images/img_nav_prev.jpg") no-repeat scroll left top transparent;height:27px;width:56px;}
