--- a/themes/v15_fadmashion_commerce/css/style.css
+++ b/themes/v15_fadmashion_commerce/css/style.css
@@ -105,16 +105,16 @@ tbody {border: medium none}
 #photoBox .zoom{background: url(../images/img_nav_zoom.jpg) top left no-repeat; height: 27px; width:262px;}
 .gzoombutton, .gzoomSlider {display: none;}
 
-#zoomed {width: 840px;}
-#zoomed .slides_container {float: left; margin: 0 9px 0 0; width: 652px;}
-#zoomed .pagination{float:left;width:153px;}
-#zoomed .next, #zoomed .prev, #zoomed .logo {position: absolute; z-index: 100;  }
-#zoomed .next, #zoomed .prev {height: 31px; width: 31px; }
-#zoomed .prev {left: 19px; background:url("../images/b_zoom_prev.png") no-repeat scroll left top transparent;}
-#zoomed .next {left: 638px; background:url("../images/b_zoom_next.png") no-repeat scroll left top transparent;}
-#zoomed .logo {bottom: 13px; right: 8px;}
-#zoomed .next:hover, #zoomed .prev:hover {background-position: bottom left; }
-#zoomed .slides_container img, #zoomed  .panFullSize {border:1px solid #F0EEEA; cursor: crosshair}
+.zoomedSlider {width: 840px;}
+.zoomedSlider .slides_container {float: left; margin: 0 9px 0 0; width: 652px;}
+.zoomedSlider .pagination{float:left;width:153px;}
+.zoomedSlider  .next, #zoomed .prev, #zoomed .logo {position: absolute; z-index: 100;  }
+.zoomedSlider  .next, #zoomed .prev {height: 31px; width: 31px; }
+.zoomedSlider .prev {left: 19px; background:url("../images/b_zoom_prev.png") no-repeat scroll left top transparent;}
+.zoomedSlider  .next {left: 638px; background:url("../images/b_zoom_next.png") no-repeat scroll left top transparent;}
+.zoomedSlider .logo {bottom: 13px; right: 8px;}
+.zoomedSlider  .next:hover, #zoomed .prev:hover {background-position: bottom left; }
+.zoomedSlider  .slides_container img, #zoomed  .panFullSize {border:1px solid #F0EEEA; cursor: crosshair}
 
 .productInfo{float: left; text-align: left; margin: 0 0 0 30px; width: 335px;}
 
