--- a/themes/v15_fadmashion_commerce/css/style.css
+++ b/themes/v15_fadmashion_commerce/css/style.css
@@ -93,13 +93,13 @@ tbody {border: medium none}
 #photoBox .slides_container { height: 474px; }
 #photoBox .slides_container img{border:1px solid #F0EEEA; cursor: pointer;}
 #photoBox .pagination{float: left; margin-top: 5px;}
-#photoBox .pagination li,  #zoomed .pagination li{float: left; margin: 0 4px 4px 0; }
-#photoBox .pagination li.current a img, #zoomed .pagination li.current a img{border:1px solid #A32E27; }
-#photoBox .pagination li a img, #zoomed .pagination li a img{border:1px solid #F0EEEA;}
-#photoBox .pagination li a img:hover, #zoomed .pagination li a img:hover{border:1px solid #A32E27;}
+#photoBox .pagination li,  .zoomedSlider  .pagination li{float: left; margin: 0 4px 4px 0; }
+#photoBox .pagination li.current a img, .zoomedSlider .pagination li.current a img{border:1px solid #A32E27; }
+#photoBox .pagination li a img, .zoomedSlider  .pagination li a img{border:1px solid #F0EEEA;}
+#photoBox .pagination li a img:hover, .zoomedSlider  .pagination li a img:hover{border:1px solid #A32E27;}
 
-#photoBox .next, #photoBox .prev, #photoBox .zoom, #zoomed .next, #zoomed .prev, #zoomed .zoom {float: left; display: block; text-indent: -9999px; overflow: hidden; }
-#photoBox.next:hover, .photos .prev:hover, .photos .zoom:hover {background-position: bottom left;}
+#photoBox .next, #photoBox .prev, #photoBox .zoom, .zoomedSlider  .next, .zoomedSlider  .prev, .zoomedSlider  .zoom {float: left; display: block; text-indent: -9999px; overflow: hidden; }
+#photoBox .next:hover, .photos .prev:hover, .photos .zoom:hover {background-position: bottom left;}
 #photoBox .next { background:url("../images/img_nav_next.jpg") no-repeat scroll left top transparent;height:27px;width:56px;}
 #photoBox .prev { background:url("../images/img_nav_prev.jpg") no-repeat scroll left top transparent;height:27px;width:56px;}
 #photoBox .zoom{background: url(../images/img_nav_zoom.jpg) top left no-repeat; height: 27px; width:262px;}
@@ -108,7 +108,7 @@ tbody {border: medium none}
 .zoomedSlider {width: 840px;}
 .zoomedSlider .slides_container {float: left; margin: 0 9px 0 0; width: 652px;}
 .zoomedSlider .pagination{float:left;width:153px;}
-.zoomedSlider  .next, .zoomedSlider .prev, #zoomed .logo {position: absolute; z-index: 100; text-indent: 9999px }
+.zoomedSlider  .next, .zoomedSlider .prev, .zoomedSlider .logo {position: absolute; z-index: 100; text-indent: 9999px }
 .zoomedSlider  .next, .zoomedSlider  .prev {height: 31px; width: 31px; }
 .zoomedSlider .prev {left: 19px; background:url("../images/b_zoom_prev.png") no-repeat scroll left top transparent;}
 .zoomedSlider  .next {left: 638px; background:url("../images/b_zoom_next.png") no-repeat scroll left top transparent;}
