--- a/themes/v15_fadmashion_commerce/css/style.css
+++ b/themes/v15_fadmashion_commerce/css/style.css
@@ -101,7 +101,7 @@ tbody {border: medium none}
 #photoBox{width: 374px; float: left;}
 #photoBox{padding-bottom: 10px;}
 #photoBox .slides_container { height: 474px; }
-#photoBox .slides_container img{border:1px solid #F0EEEA; cursor: pointer;}
+#photoBox .slides_container img{border:1px solid #F0EEEA; cursor:url("../images/zoomin.png"), -moz-zoom-in;}
 #photoBox .pagination{float: left; margin-top: 5px;}
 #photoBox .pagination li,  .zoomedSlider  .pagination li{float: left; margin: 0 3px 3px 0; }
 #photoBox .pagination li.current a img, .zoomedSlider .pagination li.current a img{border:1px solid #A32E27; }
